finally fixed bugs when saving and updating sessions in the api